# debloat

./: .gitignore  LICENSE  README.md  buildCLI.txt  changelog.txt  debloat.py  main.py  processor.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
debloat/: gui.py  main.py
hook/: hook-tkinterdnd2.py
src/debloat/: auxiliary.py  debloat.icns  gui.py  gui.spec  main.py  performanceTest.py  processor.py  processor.pyi
src/debloat/hook/: hook-tkinterdnd2.py
src/debloat/tests/: debloat_test.py
src/debloat/utilities/: nsisParser.py  readers.py  rsrc.py
